* v1.5.0 (unreleased)
 - Install the Python bindings to "site-packages"
 - The Python bindings for Qt6 use the "PyKDDockWidgetsQt6" namespace
 - Co-installable with Qt6

* v1.4.1 (unreleased)
 -

* v1.4.0 (16 July 2021)
  - No longer supports Qt versions less than 5.12
  - Experimental MDI support. By using MainWindowMDI you can now have "docked" dock widgets
    which are free to be arbitrarily positioned and even overlapped inside the main window.
  - TitleBar's height is now controlled by sizeHint() instead of hardcoded.
    If you haven't overridden TitleBar or just inheriting from TitleBarWidget then there's nothing to do,
    as TitleBarWidget already reimplements sizeHint. If you're inheriting directly from TitleBar then make
    sure to provide a sizeHint.
  - Added MainWindow::closeDockWidgets()
  - Fixed crash in MainWindow::layoutEqually()
  - QtQuick: Added more declarative API
  - FloatingWindow now honours the dockwidget's max-size, if there's a single
    dock widget docked. Tabbed cases are more difficult since QStackedLayout doesn't
    propagate size constraints.
  - Added MainWindowBase::frameCountChanged()
  - Introduced Config::setDropIndicatorsInhibited(), which allows you to disable support
  for drop indicators while dragging.
  - Fixed embedding the main window into a non-kddw main window (#204, #168)
  - Fixed crash with an MFC application
  - Allows to disable translucency via the KDDW_NO_TRANSLUCENCY env var, useful
    in case running on weird Window Managers.
  - Added Flag_ShowButtonsOnTabBarIfTitleBarHidden, which can be used when using Flag_HideTitleBarWhenTabsVisible.
    The close and float buttons will be shown directly in the tab-bar.
  - Fixes persistent central frame being invisible after closing all tabs (#220)
  - Added python bindings for the InitialOption struct (#198)
  - Generate and install camelcase forwarding headers (public, exported classes)
  - Build in Release mode by default (in non-developer situations)
