@@ -55,7 +55,9 @@ enum MainWindowOption
 {
     MainWindowOption_None = 0, ///> No option set
     MainWindowOption_HasCentralFrame = 1, ///> Makes the MainWindow always have a central frame, for tabbing documents
-    MainWindowOption_MDI = 2 ///> The layout will be MDI. DockWidgets can have arbitrary positions, not restricted by any layout
+    MainWindowOption_MDI = 2, ///> The layout will be MDI. DockWidgets can have arbitrary positions, not restricted by any layout
+    MainWindowOption_HasCentralWidget = 4 | MainWindowOption_HasCentralFrame, ///> Similar to MainWindowOption_HasCentralFrame but
+    ///> you'll have a central widget which can't be detached (Similar to regular QMainWindow).
 };
 Q_DECLARE_FLAGS(MainWindowOptions, MainWindowOption)
 Q_ENUM_NS(MainWindowOptions)
@@ -258,7 +260,8 @@ enum FrameOption
     FrameOption_None = 0,
     FrameOption_AlwaysShowsTabs = 1,
     FrameOption_IsCentralFrame = 2,
-    FrameOption_IsOverlayed = 4
+    FrameOption_IsOverlayed = 4,
+    FrameOption_NonDockable = 8 ///> You can't DND and tab things into this Frame
 };
 Q_DECLARE_FLAGS(FrameOptions, FrameOption)
 Q_ENUM_NS(FrameOptions)
